// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectAdminSelectionStepForm /> renders correctly with data 1`] = `
<Fragment>
  <Connect(StepVotesFields)
    isBudgetEnabled={true}
    isLimitEnabled={true}
    isTresholdEnabled={true}
    options={
      Object {
        "limit": 0,
        "min": 0,
        "ranking": false,
      }
    }
    stepFormName="defaultForm"
    votable={true}
  />
  <ProjectAdminFormstyle__ProjectBoxHeader>
    <h5>
      <FormattedMessage
        id="global.proposals"
        values={Object {}}
      />
    </h5>
  </ProjectAdminFormstyle__ProjectBoxHeader>
  <ProjectAdminFormstyle__ProjectSmallFieldsContainer>
    <ForwardRef
      direction="row"
      flex="1"
    >
      <ForwardRef
        maxWidth="175px"
        ml={2}
        width="100%"
      >
        <Field
          clearable={false}
          component={[Function]}
          id="step-defaultSort"
          inputClassName="fake-inputClassName"
          label={
            <FormattedMessage
              id="admin.fields.opinion_type.default_filter"
              values={Object {}}
            />
          }
          labelClassName="control-label"
          name="defaultSort"
          options={
            Array [
              Object {
                "label": "global.random",
                "value": "RANDOM",
              },
              Object {
                "label": "global.filter_f_comments",
                "value": "COMMENTS",
              },
              Object {
                "label": "global.filter_f_last",
                "value": "LAST",
              },
              Object {
                "label": "global.filter_f_old",
                "value": "OLD",
              },
              Object {
                "label": "step.sort.votes",
                "value": "VOTES",
              },
              Object {
                "label": "global.filter_f_least-votes",
                "value": "LEAST_VOTE",
              },
              Object {
                "label": "global.filter_f_cheap",
                "value": "CHEAP",
              },
              Object {
                "label": "global.filter_f_expensive",
                "value": "EXPENSIVE",
              },
            ]
          }
          placeholder=" "
        />
      </ForwardRef>
    </ForwardRef>
    <ForwardRef
      direction="column"
      flex="1"
    >
      <Text
        color="gray.900"
        fontSize={14}
        fontWeight={600}
      >
        <FormattedMessage
          id="proposal-news-label"
          values={Object {}}
        />
      </Text>
      <Text
        color="gray.600"
        fontSize={11}
        lineHeight="16px"
        mb={2}
        mt={1}
      >
        <FormattedMessage
          id="proposal-news-help-text"
          values={Object {}}
        />
      </Text>
      <Field
        component={[Function]}
        id="step-allowAuthorsToAddNews"
        name="allowAuthorsToAddNews"
        type="checkbox"
      >
        <FormattedMessage
          id="allow-proposal-news"
          values={Object {}}
        />
      </Field>
    </ForwardRef>
  </ProjectAdminFormstyle__ProjectSmallFieldsContainer>
  <Field
    component={[Function]}
    id="step-allowingProgressSteps"
    label={
      <FormattedMessage
        id="admin.fields.step.allowingProgressSteps"
        values={Object {}}
      />
    }
    name="allowingProgressSteps"
    normalize={[Function]}
  />
  <ProjectAdminFormstyle__ProjectBoxHeader>
    <h5>
      <FormattedMessage
        id="admin.fields.step.statuses"
        values={Object {}}
      />
    </h5>
  </ProjectAdminFormstyle__ProjectBoxHeader>
  <FieldArray
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(StepStatusesList)",
        "type": [Function],
      }
    }
    formName="stepForm"
    name="statuses"
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn-outline-primary box-content__toolbar mb-20"
    disabled={false}
    id="js-btn-create-step-status"
    onClick={[Function]}
  >
    <i
      className="fa fa-plus-circle"
    />
     
    <FormattedMessage
      id="global.add"
      values={Object {}}
    />
  </Button>
  <ProjectAdminFormstyle__ProjectBoxHeader>
    <h5>
      <FormattedMessage
        id="requirements"
        values={Object {}}
      />
    </h5>
  </ProjectAdminFormstyle__ProjectBoxHeader>
  <FieldArray
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(StepRequirementsList)",
        "type": [Function],
      }
    }
    formName="stepForm"
    name="requirements"
    requirements={
      Array [
        Object {
          "checked": false,
          "label": "Sku",
          "type": "CHECKBOX",
        },
        Object {
          "id": "fumier",
          "type": "LASTNAME",
        },
      ]
    }
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn-outline-primary box-content__toolbar mb-20"
    disabled={false}
    id="js-btn-create-step"
    onClick={[Function]}
  >
    <i
      className="fa fa-plus-circle"
    />
     
    <FormattedMessage
      id="global.add"
      values={Object {}}
    />
  </Button>
  <Field
    component={[Function]}
    id="step-requirementsReason"
    label={
      <FormattedMessage
        id="reason-for-collection"
        values={Object {}}
      />
    }
    name="requirementsReason"
    type="editor"
  />
</Fragment>
`;

exports[`<ProjectAdminSelectionStepForm /> renders correctly with no initial data 1`] = `
<Fragment>
  <Connect(StepVotesFields)
    isBudgetEnabled={false}
    isLimitEnabled={false}
    isTresholdEnabled={false}
    options={
      Object {
        "limit": 3,
        "min": 1,
        "ranking": true,
      }
    }
    stepFormName="defaultForm"
    votable={false}
  />
  <ProjectAdminFormstyle__ProjectBoxHeader>
    <h5>
      <FormattedMessage
        id="global.proposals"
        values={Object {}}
      />
    </h5>
  </ProjectAdminFormstyle__ProjectBoxHeader>
  <ProjectAdminFormstyle__ProjectSmallFieldsContainer>
    <ForwardRef
      direction="row"
      flex="1"
    >
      <ForwardRef
        maxWidth="175px"
        ml={2}
        width="100%"
      >
        <Field
          clearable={false}
          component={[Function]}
          id="step-defaultSort"
          inputClassName="fake-inputClassName"
          label={
            <FormattedMessage
              id="admin.fields.opinion_type.default_filter"
              values={Object {}}
            />
          }
          labelClassName="control-label"
          name="defaultSort"
          options={
            Array [
              Object {
                "label": "global.random",
                "value": "RANDOM",
              },
              Object {
                "label": "global.filter_f_comments",
                "value": "COMMENTS",
              },
              Object {
                "label": "global.filter_f_last",
                "value": "LAST",
              },
              Object {
                "label": "global.filter_f_old",
                "value": "OLD",
              },
              Object {
                "label": "step.sort.votes",
                "value": "VOTES",
              },
              Object {
                "label": "global.filter_f_least-votes",
                "value": "LEAST_VOTE",
              },
              Object {
                "label": "global.filter_f_cheap",
                "value": "CHEAP",
              },
              Object {
                "label": "global.filter_f_expensive",
                "value": "EXPENSIVE",
              },
            ]
          }
          placeholder=" "
        />
      </ForwardRef>
    </ForwardRef>
    <ForwardRef
      direction="column"
      flex="1"
    >
      <Text
        color="gray.900"
        fontSize={14}
        fontWeight={600}
      >
        <FormattedMessage
          id="proposal-news-label"
          values={Object {}}
        />
      </Text>
      <Text
        color="gray.600"
        fontSize={11}
        lineHeight="16px"
        mb={2}
        mt={1}
      >
        <FormattedMessage
          id="proposal-news-help-text"
          values={Object {}}
        />
      </Text>
      <Field
        component={[Function]}
        id="step-allowAuthorsToAddNews"
        name="allowAuthorsToAddNews"
        type="checkbox"
      >
        <FormattedMessage
          id="allow-proposal-news"
          values={Object {}}
        />
      </Field>
    </ForwardRef>
  </ProjectAdminFormstyle__ProjectSmallFieldsContainer>
  <Field
    component={[Function]}
    id="step-allowingProgressSteps"
    label={
      <FormattedMessage
        id="admin.fields.step.allowingProgressSteps"
        values={Object {}}
      />
    }
    name="allowingProgressSteps"
    normalize={[Function]}
  />
  <ProjectAdminFormstyle__ProjectBoxHeader>
    <h5>
      <FormattedMessage
        id="admin.fields.step.statuses"
        values={Object {}}
      />
    </h5>
  </ProjectAdminFormstyle__ProjectBoxHeader>
  <FieldArray
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(StepStatusesList)",
        "type": [Function],
      }
    }
    formName="stepForm"
    name="statuses"
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn-outline-primary box-content__toolbar mb-20"
    disabled={false}
    id="js-btn-create-step-status"
    onClick={[Function]}
  >
    <i
      className="fa fa-plus-circle"
    />
     
    <FormattedMessage
      id="global.add"
      values={Object {}}
    />
  </Button>
  <ProjectAdminFormstyle__ProjectBoxHeader>
    <h5>
      <FormattedMessage
        id="requirements"
        values={Object {}}
      />
    </h5>
  </ProjectAdminFormstyle__ProjectBoxHeader>
  <FieldArray
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(StepRequirementsList)",
        "type": [Function],
      }
    }
    formName="stepForm"
    name="requirements"
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn-outline-primary box-content__toolbar mb-20"
    disabled={false}
    id="js-btn-create-step"
    onClick={[Function]}
  >
    <i
      className="fa fa-plus-circle"
    />
     
    <FormattedMessage
      id="global.add"
      values={Object {}}
    />
  </Button>
  <Field
    component={[Function]}
    id="step-requirementsReason"
    label={
      <FormattedMessage
        id="reason-for-collection"
        values={Object {}}
      />
    }
    name="requirementsReason"
    type="editor"
  />
</Fragment>
`;
